# ChangeLog for dev-python/plac
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 May 2012; James Rowe <jnrowe@gmail.com> plac-0.9.1.ebuild:
  Keyworded amd64.

*plac-0.9.1 (29 Apr 2012)

  29 Apr 2012; James Rowe <jnrowe@gmail.com> +plac-0.9.1.ebuild:
  Version bump [598].

  09 Apr 2012; James Rowe <jnrowe@gmail.com> plac-0.9.0.ebuild:
  src_install default hack now in jnrowe-pypi eclass.

  08 Apr 2012; James Rowe <jnrowe@gmail.com> plac-0.9.0.ebuild:
  Switched to python-distutils-ng eclass.

  18 Mar 2012; James Rowe <jnrowe@gmail.com> plac-0.9.0.ebuild:
  Switched to EAPI4.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> plac-0.9.0.ebuild:
  Removed Python 2.4 support.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  24 Jul 2011; James Rowe <jnrowe@gmail.com> -plac-0.8.1.ebuild,
  plac-0.9.0.ebuild:
  Keyworded x86.

  24 Jul 2011; James Rowe <jnrowe@gmail.com> plac-0.9.0.ebuild:
  Keyworded amd64.

*plac-0.9.0 (22 Jun 2011)

  22 Jun 2011; James Rowe <jnrowe@gmail.com> +plac-0.9.0.ebuild:
  Version bump [392].

  18 May 2011; James Rowe <jnrowe@gmail.com> -plac-0.8.0.ebuild,
  plac-0.8.1.ebuild:
  Keyworded x86.

  18 May 2011; James Rowe <jnrowe@gmail.com> plac-0.8.1.ebuild:
  Keyworded amd64.

*plac-0.8.1 (18 Apr 2011)

  18 Apr 2011; James Rowe <jnrowe@gmail.com> +plac-0.8.1.ebuild:
  Version bump [344].

  28 Mar 2011; James Rowe <jnrowe@gmail.com> -plac-0.7.5.ebuild,
  plac-0.8.0.ebuild:
  Keyworded x86.

  26 Mar 2011; James Rowe <jnrowe@gmail.com> plac-0.8.0.ebuild:
  Keyworded amd64.

*plac-0.8.0 (23 Feb 2011)

  23 Feb 2011; James Rowe <jnrowe@gmail.com> +plac-0.8.0.ebuild:
  Version bump [288].

  17 Feb 2011; James Rowe <jnrowe@gmail.com> -plac-0.7.4.ebuild,
  plac-0.7.5.ebuild:
  Keyworded x86.

  17 Feb 2011; James Rowe <jnrowe@gmail.com> plac-0.7.5.ebuild:
  Keyworded amd64.

*plac-0.7.5 (18 Jan 2011)
