@@ -1,12 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST plac-0.9.0.tar.gz 148758 RMD160 d469a924d57a32ccdbcd6181ce1a253b7d349a49 SHA1 4b803bc417a970536780e1c123b117b122604af0 SHA256 c36f7e82cdca18829dd9283d233ed2312e8bc526375aa5f209660b36c038b05b
 DIST plac-0.9.1.tar.gz 151716 RMD160 f3818304cad84dc4e74d86c8511075ba78966330 SHA1 dbd0ce5a8218470376fa24f92241591814f80257 SHA256 2a47beb7dae29e23f7f2732fa2ca9c06e2c6da6542d221fd4a299fdc17f525d0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk+ciyoACgkQzJrj3cAXR0mJTQCbBZXAkXD3U8k5FPuIEdJTauOr
-oIoAn1a2AeoXSHnNty2bjXi85rq0II4p
-=0Acx
+iEYEAREKAAYFAk/FGHQACgkQzJrj3cAXR0k/wwCfUoYuyAdx8H+Q6e+9tHNNl+z+
+miYAn0w1teuce7ctK0Fn3PftNZTNT51J
+=0/3t
 -----END PGP SIGNATURE-----
