@@ -351,8 +351,7 @@
  * Licence: ``BSD``
  * Versions:
 
-  * `0.9.0 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-python/plac/plac-0.9.0.ebuild>`__  ``amd64``, ``x86``
-  * `0.9.1 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-python/plac/plac-0.9.1.ebuild>`__  ``amd64``, ``~x86`` (due 2012-05-29)
+  * `0.9.1 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-python/plac/plac-0.9.1.ebuild>`__  ``amd64``, ``x86``
 
 * ``prettytable`` - http://code.google.com/p/prettytable/
 
