@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=dev-python/setuptools !<sys-apps/portage-2.1.10.58 python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) python_targets_python3_1? ( dev-lang/python:3.1 ) python_targets_python3_2? ( dev-lang/python:3.2 )
-DESCRIPTION=The smartest command line arguments parser in the world
-EAPI=4
-HOMEPAGE=http://pypi.python.org/pypi/plac/
-IUSE=examples tk python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 python_targets_python3_1 python_targets_python3_2
-KEYWORDS=amd64 x86
-LICENSE=BSD
-RDEPEND=|| ( dev-python/argparse >=dev-lang/python-2.7 ) || ( dev-python/multiprocessing >=dev-lang/python-2.6 ) tk? ( dev-lang/python[tk] ) python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) python_targets_python3_1? ( dev-lang/python:3.1 ) python_targets_python3_2? ( dev-lang/python:3.2 )
-REQUIRED_USE=|| ( python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 python_targets_python3_1 python_targets_python3_2 )
-SLOT=0
-SRC_URI=mirror://pypi/p/plac/plac-0.9.0.tar.gz
-_eclasses_=base	5f35078c26d6c60556d5c8a2feb4f84f	eutils	39af24987a4a7a34dccf2ef9cc6af3f7	jnrowe-pypi	9789fd5aecac33fd48a8bcd9d1dc98e0	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python-distutils-ng	9649998e4ceeb56a6745cc819dbafcb6	toolchain-funcs	f71b9936acc911ed1cc84557d3b5c2b3	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=bf4d0328c5236688c4e1a0382e9db9cb
