@@ -1,4 +1,3 @@
-REM 2012-05-29 *1 MSG %"Stabilise x86 dev-python/plac-0.9.1%" %a
 REM 2012-05-29 *1 MSG %"Stabilise x86 media-gfx/sphinxcontrib-blockdiag-1.1.1%" %a
 REM 2012-05-31 *1 MSG %"Stabilise x86 app-misc/hammertime-0.2.4%" %a
 REM 2012-05-31 *1 MSG %"Stabilise x86 app-misc/hubugs-0.13.1%" %a
