@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 May 2012; James Rowe <jnrowe@gmail.com> -plac-0.9.0.ebuild,
+  plac-0.9.1.ebuild:
+  Keyworded x86.
+
   29 May 2012; James Rowe <jnrowe@gmail.com> plac-0.9.1.ebuild:
   Keyworded amd64.
 
